--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -16,4 +16,4 @@
         = form.submit 'Log in', class: 'btn btn-primary'
         %hr
         New to Ethermine? 
-        = link_to 'Sign up', registration_index_path
+        = link_to 'Sign up', signup_path
