--- a/app/views/addresses/new.html.haml
+++ b/app/views/addresses/new.html.haml
@@ -2,7 +2,7 @@
   .col-xs-10.offset-xs-1.col-md-4.offset-md-4
     .card
       .card-header
-        %h5 Submit your Address
+        %h5 Submit your Address!
       = form_with model: @address, url: { action: "create" }, class 'card-body' do |form|
         .form-group
           = form.label :address
