--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,6 +1,8 @@
 %br
 .container
   .row
+    #content
+      = render 'addresses'
     #sidebar.col-sm-3
       = render 'sidebar'
     #main.col-sm-9
