Adding the controller and views for the addresses, also the routes file was modified and a partial

--- a/app/views/users/_addresses.html.haml
+++ b/app/views/users/_addresses.html.haml
@@ -1,38 +1,28 @@
-%script{:src => "http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"}
-%script{:src => "http://getbootstrap.com/dist/js/bootstrap.min.js"}
-.container
-  .row
-    .col-md-12
-      %h4 
-      .table-responsive
-        %table#mytable.table.table-bordred.table-striped
-          %thead
-            %th Alias
-            %th Address
-            %th Edit
-            %th Delete
-          %tbody
-            -@addresses.each do |a|
-              %tr
-                %td
-                  =a.alias
-                %td
-                  =a.address
-                %td
-                  =link_to 'Edit', edit_address_path(a)
-                %td
-                  =link_to 'Destroy', address_path(a),
-                    method: :delete,
-                    data: {confirm: 'Are you sure'}
-
-                %br
+.row
+  .col-md-12
+    %h4 My addresses 
+    .col
+      =link_to 'Add new address', new_address_path, class: 'btn btn-success float-sm-right'
+    %br
+    %br 
+    .table-responsive
+      %table#mytable.table.table-bordred.table-striped
+        %thead
+          %th Alias
+          %th Address
+          %th Edit
+          %th Delete
+        %tbody
+          -@addresses.each do |a|
             %tr
               %td
+                =a.alias
               %td
+                =a.address
               %td
-              %td 
-                =link_to 'Add new address', new_address_path
-
-
-
-        .clearfix
+                =link_to 'Edit', edit_address_path(a)
+              %td
+                =link_to 'Destroy', address_path(a),
+                  method: :delete,
+                data: {confirm: 'Are you sure'}
+    .clearfix
