--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -2,6 +2,4 @@
 .container
   .row
     #sidebar.col-sm-3
-      = render 'prices'
-    #content
-      = render 'poolstats'
+      = render 'sidebar'
