Changed guard clause

--- a/app/views/registration/index.html.haml
+++ b/app/views/registration/index.html.haml
@@ -22,4 +22,4 @@
         = form.submit 'Sign Up', class: 'btn btn-primary', align: 'center'
       .card-footer 
         Do you have an account?
-        =link_to 'Log in', home_index_path
+        =link_to 'Log in', login_path
