Adding a footer, now the header and footer render in all views of the page

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -3,6 +3,6 @@
     Ethermine
     = image_tag ('/assets/doggo.png')
   .form-inline.my-2.my-lg-0
-    .btn.btn-outline-danger
-      = link_to 'Log Out', credential_path(1), method: :destroy
+    .float-right
+      = link_to 'Log Out', credential_path(:id), method: :destroy, class: 'btn btn-danger'
 %br
