Fixing the footer and navbar design

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,21 +1,22 @@
 %br
-.footer.bg-info.position-sticky
-  %br
-  .row
-    .col-md-6
-      %h5 EthermineApp
-      %p With this awesome app you can get the information about a miner
-    .col-md-6.bg-info
-      %h5 Links
-      %ul
-        %li
-          %a{href: "https://rubygems.org/gems/etherclient", class: 'text-dark'}= "etherclient gem"
-        %li
-          %a{href: "https://github.com/lacf95/etherclient", class: 'text-dark'}= "etherclient documentation"
-        %li
-          %a{href: "https://github.com/lacf95/EthermineApp", class: 'text-dark'}= "ethermineApp documentation"
-        %li
-          %a{href: "https://api.ethermine.org/docs/#api-Miner", class: 'text-dark'}= "ethermine API"
-  .footer-copyright.bg-primary
+  .page-footer.blue.center-on-small-only.bg-info
     .container-fluid
-      %p © 2018 Ethermine
+      .row
+        .col-md-6
+          .title
+            Footer Content
+          %p Place your shit here  
+        .col-md-6
+          .tile
+            links
+          %ul
+            %li
+              %a{href: "https://rubygems.org/gems/etherclient", class: 'text-dark'}= "Etherclient gem"
+            %li
+              %a{href: "https://github.com/lacf95/etherclient", class: 'text-dark'}= "Etherclient Documentation"
+            %li
+              %a{href: "https://github.com/lacf95/EthermineApp", class: 'text-dark'}= "EthermineApp Documentation"
+            %li
+              %a{href: "https://api.ethermine.org/docs/#api-Miner", class: 'text-dark'}= "Ethermine API"
+    .footer-copyright
+
