--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,21 @@
  *= require_tree .
  *= require_self
  */
+.page-footer{
+  margin-top: 90px;
+  margin-bottom: -40px;
+
+}
+img{
+  width: 40px;
+  height: 40px;
+}
+
+.navbar{
+  font-size: 40px;
+}
+
+#navText:hover{
+  padding-left: 30px;	
+  transform: scale(1.5)
+}
