--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,22 +1,25 @@
 %br
   .page-footer.blue.center-on-small-only.bg-info
+    %br
     .container-fluid
       .row
         .col-md-6
-          .title
-            Footer Content
-          %p Place your shit here  
+          .title.text-white
+            EthermineApp
+          %p{class: 'text-white'} With this awesome app you can get the information about a miner
         .col-md-6
-          .tile
-            links
+          .tile.text-white
+            Links:
           %ul
             %li
-              %a{href: "https://rubygems.org/gems/etherclient", class: 'text-dark'}= "Etherclient gem"
+              %a{href: "https://rubygems.org/gems/etherclient", class: 'text-white'}= "Etherclient gem"
             %li
-              %a{href: "https://github.com/lacf95/etherclient", class: 'text-dark'}= "Etherclient Documentation"
+              %a{href: "https://github.com/lacf95/etherclient", class: 'text-white'}= "Etherclient Documentation"
             %li
-              %a{href: "https://github.com/lacf95/EthermineApp", class: 'text-dark'}= "EthermineApp Documentation"
+              %a{href: "https://github.com/lacf95/EthermineApp", class: 'text-white'}= "EthermineApp Documentation"
             %li
-              %a{href: "https://api.ethermine.org/docs/#api-Miner", class: 'text-dark'}= "Ethermine API"
-    .footer-copyright
+              %a{href: "https://api.ethermine.org/docs/#api-Miner", class: 'text-white'}= "Ethermine API"
+    .footer-copyright.bg-primary
+      .container-fluid.text-white
+        © 2018 Copyright EthermineApp
 
