--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -2,10 +2,13 @@
   .navbar-brand{id: "navText"}
     Ethermine
     %img(src='/assets/doggo.ico')
-  - unless current_page?(signup_url) 
+  - if !current_page?(signup_url) 
+    %p= show_user_name
     = link_to 'Log Out', credential_path(1), method: :delete, class: 'btn btn-danger'
   - else
     .form-inline.my-2.my-lg-0
       .float-right
+        %p- show_user_name
         - link_to 'Log Out', credential_path(1), method: :delete, class: 'btn btn-danger'
+    
 %br
