--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -2,13 +2,9 @@
   .navbar-brand{id: "navText"}
     Ethermine
     %img(src='/assets/doggo.ico')
-  - if !current_page?(signup_url) 
-    %p= show_user_name
-    = link_to 'Log Out', credential_path(1), method: :delete, class: 'btn btn-danger'
-  - else
+  - if current_page?(users_path) || current_page?(new_address_path) || current_page?(edit_address_path) || current_page?(address_path)  
+    %p{id: 'user_name'}= show_user_name
     .form-inline.my-2.my-lg-0
       .float-right
-        %p- show_user_name
-        - link_to 'Log Out', credential_path(1), method: :delete, class: 'btn btn-danger'
-    
+        = link_to 'Log Out', credential_path(1), method: :delete, class: 'btn btn-danger'
 %br
