--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,10 +1,11 @@
 .navbar.navbar-dark.bg-info
-  .navbar-brand{id: "navText"}
+  .navbar-brand{id: 'navText'}
     Ethermine
     %img(src='/assets/doggo.ico')
-  - if current_page?(users_path) || current_page?(new_address_path) || current_page?(edit_address_path) || current_page?(address_path)  
-    %p{id: 'user_name'}= show_user_name
+  - if current_page?(users_path) || current_page?(new_address_path) || current_page?(addresses_path) 
     .form-inline.my-2.my-lg-0
       .float-right
-        = link_to 'Log Out', credential_path(1), method: :delete, class: 'btn btn-danger'
+        %span{class: 'badge badge-success' }
+          = show_user_name
+          = link_to 'Log Out', credential_path(1), method: :delete, class: 'btn btn-danger'
 %br
