Completed the confirmation email functionality

--- a/app/views/user_notifier_mailer/send_signup_email.html.haml
+++ b/app/views/user_notifier_mailer/send_signup_email.html.haml
@@ -1,6 +1,8 @@
 %h1 
-  Thanks for signing up 
+  Thanks for signing up
   = @user.full_name
-
+%p 
+  In order to access all amazing features
+  = link_to 'confirm your account', @url
 %p Thanks for joining to our awesome app
 
